<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="areYouSureYouWantToDeleteMedia_">Are you sure you want to delete media %s?</string>
    <string name="areYouSureYouWantToDeleteThisMedia">Are you sure you want to delete this media?</string>
    <string name="authenticationError">Authentication error: %s</string>
    <string name="browse">Browse</string>
    <string name="cancel">Cancel</string>
    <string name="capturePhoto">Capture Photo</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="connectionError">connection error</string>
    <string name="copyright">Copyright © 2014, Labis Papadopoulos. All Rights Reserved</string>
    <string name="created">Created</string>
    <string name="createdFrom">Created From</string>
    <string name="createdTo">Created To</string>
    <string name="dateFormat">dd/MM/yy</string>
    <string name="delete">Delete</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="download">Download</string>
    <string name="duration">Duration</string>
    <string name="durationFormatHours">%1$d h %2$d m %3$d s</string>
    <string name="durationFormatMinutes">%1$d m %2$d s</string>
    <string name="durationFormatSeconds">%1$d s</string>
    <string name="edit">Edit</string>
    <string name="editMedia">Edit Media</string>
    <string name="edited">Edited</string>
    <string name="editedFrom">Edited From</string>
    <string name="editedTo">Edited To</string>
    <string name="email">Email</string>
    <string name="emailFormat">%1$s@...</string>
    <string name="errorCapturingPhoto">Error capturing photo: %s</string>
    <string name="errorCapturingVideo">Error capturing video: %s</string>
    <string name="errorRetrievingMedia">Error retrieving media: %s</string>
    <string name="errorRetrievingUser">error retrieving user</string>
    <string name="errorDeletingMedia">Error deleting media: %s</string>
    <string name="errorDownloadingMedia">Error downloading media: %s</string>
    <string name="errorEditingUser">Error editing user: %s</string>
    <string name="errorEditingMedia">Error editing media: %s</string>
    <string name="errorUploadingMedia">Error uploading media: %s</string>
    <string name="file">File</string>
    <string name="forgotYourPassword">Forgot your password?</string>
    <string name="invalidCredentials">invalid credentials</string>
    <string name="latitudeAndLongitude">Latitude/Longitude</string>
    <string name="latitudeFormatNorth">%1$d° %2$d′ %3$d″ N</string>
    <string name="latitudeFormatSouth">%1$d° %2$d′ %3$d″ S</string>
    <string name="list">List</string>
    <string name="locationFormat">(%1$s %2$s)</string>
    <string name="logout">Logout</string>
    <string name="longitudeFormatEast">%1$d° %2$d′ %3$d″ E</string>
    <string name="longitudeFormatWest">%1$d° %2$d′ %3$d″ W</string>
    <string name="map">Map</string>
    <string name="menu">Menu</string>
    <string name="mobileMediaShare">Mobile Media Share</string>
    <string name="myAccount">My Account</string>
    <string name="name">Name</string>
    <string name="newPhoto">New Photo</string>
    <string name="newToMobileMediaShareCreateAnAccountNow">New to Mobile Media Share? Create an account now!</string>
    <string name="newVideo">New Video</string>
    <string name="notFound">not found</string>
    <string name="ok">OK</string>
    <string name="pageSize">Page Size</string>
    <string name="password">Password</string>
    <string name="passwordsDoNotMatch">Passwords do not match</string>
    <string name="pleaseLoginToContinue">Please Login to continue</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="private_">Private</string>
    <string name="publik">Public</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="size">Size</string>
    <string name="sizeFormatB">%1$d B</string>
    <string name="sizeFormatKB">%1$.3f KB</string>
    <string name="sizeFormatMB">%1$.3f MB</string>
    <string name="startRecording">Start recording</string>
    <string name="status">Status</string>
    <string name="stopRecording">Stop recording</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="upload">Upload</string>
    <string name="uploadingFile">Uploading file</string>
    <string name="user">User</string>
    <string name="viewMedia">View Media</string>
    <string name="view">View</string>
    <string name="welcomeToMobileMediaShare">Welcome to Mobile Media Share</string>

    <string name="copyrightUrl">http://www.di.uoa.gr/~std08169</string>
    <string name="downloadUrl">%1$sdownloadServlet?token=%2$s</string>
    <string name="deleteMediaUrl">%1$smediaServlet?id=%2$s</string>
    <string name="editMediaUrl">%1$smediaServlet?id=%2$s&amp;title=%3$s&amp;public=%4$s&amp;latitude=%5$s&amp;longitude=%6$s</string>
    <string name="userServletUrl">%1$suserServlet</string>
    <string name="getListUrl">%1$smediaServlet?action=getList</string>
    <string name="getResultUrl">%1$smediaServlet?action=getResult</string>
    <string name="getMediaUrl">%1$smediaServlet?action=getMedia&amp;id=%2$s</string>
    <string name="logoutUrl">%1$slogout.jsp</string>
    <string name="newUserUrl">%1$snewUser.html?locale=en</string>
    <string name="forgotPasswordUrl">%1$sforgotPassword.html?locale=en</string>
    <string name="requestDownloadUrl">%1$sdownloadServlet</string>
    <string name="secureBaseUrl">https://snf-216465.vm.okeanos.grnet.gr/mobile-media-share/</string>
    <string name="unsecureBaseUrl">http://snf-216465.vm.okeanos.grnet.gr/mobile-media-share/</string>
    <string name="uploadMediaUrl">%1$smediaServlet</string>
    <string name="title_activity_file_explorer">FileExplorerActivity</string>
    <string name="title_activity_file_chooser">FileChooser</string>
    <string name="title_activity_slider_menu">SliderMenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
