<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="gr.uoa.di.std08169.mobile.media.share.android.authentication.Login">
            <TextView
                android:text="@string/pleaseLoginToContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
            <TextView
                android:text="@string/password"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/ok"
                    android:text="@string/ok"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp" />
                <Button
                    android:text="@string/reset"
                    android:id="@+id/reset"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp" />
                <Button
                    android:id="@+id/cancel"
                    android:text="@string/cancel"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/newUser"
                    android:text="@string/newToMobileMediaShareCreateAnAccountNow"
                    android:textSize="14dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/forgotPassword"
                    android:text="@string/forgotYourPassword"
                    android:textSize="14dp"
                    android:layout_marginTop="40dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>