<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <SurfaceView
                android:id="@+id/surface_camera"
                android:layout_width="@dimen/cameraWidthHeight"
                android:layout_height="@dimen/cameraWidthHeight"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_weight="1" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/startRecording"
                    android:text="@string/startRecording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>
                <Button
                    android:id="@+id/stopRecording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stopRecording"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/title"
                    android:layout_width="@dimen/titleNewPhotoVideoWidth"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center" />
                <EditText
                    android:id="@+id/title"
                    android:layout_width="@dimen/titleNewPhotoVideoEditTextWidth"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/publik"
                    android:layout_width="@dimen/isPublicTextView"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center" />
                <CheckBox
                    android:id="@+id/isPublic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/latitudeAndLongitude"
                    android:layout_width="@dimen/latitudeAndLongitudeWidth"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center" />
                <TextView
                    android:id="@+id/latlng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center" />
            </LinearLayout>
            <fragment
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/googleMapHeight"
                android:layout_marginTop="10dp"
                class="com.google.android.gms.maps.MapFragment"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/ok"
                    android:text="@string/ok"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
                <Button
                    android:id="@+id/reset"
                    android:text="@string/reset"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>