<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/title"
                            android:layout_width="@dimen/textViewWidth"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical" />
                        <EditText
                            android:id="@+id/title"
                            android:layout_width="@dimen/editTextWidth"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/user"
                            android:layout_width="@dimen/textViewWidth"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical" />
                        <EditText
                            android:id="@+id/user"
                            android:layout_width="@dimen/editTextWidth"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/createdFrom"
                            android:layout_width="@dimen/textViewWidth"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                        <EditText
                            android:id="@+id/createdFrom"
                            android:layout_width="@dimen/editTextWidth"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="date" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/createdTo"
                            android:layout_width="@dimen/textViewWidth"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                        <EditText
                            android:id="@+id/createdTo"
                            android:layout_width="@dimen/editTextWidth"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="date" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/editedFrom"
                            android:layout_width="@dimen/textViewWidth"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical" />
                        <EditText
                            android:id="@+id/editedFrom"
                            android:layout_width="@dimen/editTextWidth"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="date" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/editedTo"
                            android:layout_width="@dimen/textViewWidth"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical" />
                        <EditText
                            android:id="@+id/editedTo"
                            android:layout_width="@dimen/editTextWidth"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:clickable="true"
                            android:focusable="false"
                            android:inputType="date" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="@dimen/listSpinnerWidth"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="0dp"
                            android:orientation="vertical">
                            <TextView
                                android:text="@string/type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:layout_gravity="center_horizontal" />
                            <Spinner
                                android:id="@+id/type"
                                android:layout_width="@dimen/listSpinnerWidth"
                                android:layout_height="wrap_content"
                                android:layout_margin="0dp" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="@dimen/listPublicSpinnerWidth"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/publik"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:layout_gravity="center_horizontal" />
                            <Spinner
                                android:id="@+id/publik"
                                android:layout_width="@dimen/listPublicSpinnerWidth"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="@dimen/listPageSizeSpinnerWidth"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/pageSize"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:layout_gravity="center_horizontal" />
                            <Spinner
                                android:id="@+id/pageSize"
                                android:layout_width="@dimen/listPageSizeSpinnerWidth"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/view"
                            android:text="@string/view"
                            android:layout_width="@dimen/buttonViewWidth"
                            android:layout_height="wrap_content"/>
                        <Button
                            android:id="@+id/edit"
                            android:text="@string/edit"
                            android:layout_width="@dimen/buttonWidth"
                            android:layout_height="wrap_content"/>
                        <Button
                            android:id="@+id/delete"
                            android:text="@string/delete"
                            android:layout_width="@dimen/buttonWidth"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/download"
                            android:text="@string/download"
                            android:layout_width="@dimen/buttonDownloadWidth"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <ListView
                        android:id="@+id/list"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />
                </LinearLayout>
            </ScrollView>
</LinearLayout>