<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:id="@+id/imageProfile"
                android:src="@drawable/my_account_large"
                android:layout_width="@dimen/myAccountImageWidthHeight"
                android:layout_height="@dimen/myAccountImageWidthHeight"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/name"
                    android:layout_width="@dimen/myAccountTextViewWidth"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center" />
                <EditText
                    android:id="@+id/name"
                    android:layout_width="@dimen/myAccountEditTextViewWidth"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/status"
                    android:layout_width="@dimen/myAccountTextViewWidth"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center" />
                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/email"
                    android:layout_width="@dimen/myAccountTextViewWidth"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center" />
                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/password"
                    android:layout_width="@dimen/myAccountTextViewWidth"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center" />
                <EditText
                    android:id="@+id/password"
                    android:layout_width="@dimen/myAccountEditTextViewWidth"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/confirmPassword"
                    android:layout_width="@dimen/myAccountTextViewWidth"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center" />
                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="@dimen/myAccountEditTextViewWidth"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/ok"
                    android:text="@string/ok"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
                <Button
                    android:id="@+id/reset"
                    android:text="@string/reset"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>